Brigtness is not restored after Xorg dpms screen blank on Lenovo Yoga 7 gen 8 14APU8 in the -next kernel tree. Bad patch is also queued for stable kernel relese and may land in 6.6.5
To reproduce the issue just wait till screen goes off and move the mouse or press button - the screen remains black until you hit the brigtness control key. Then the brightness is restored instantly.
The bad patch is drm-amd-display-simplify-brightness-initialization.patch which is queued to be applied for 6.6.5 - reverting this makes dpms working again.